Increase header spacing, replace machines with shards in doomed, fix other minor bugs

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -1943,6 +1943,15 @@ br {
 
 /* #region o-prestige-button */
 
+.c-prestige-button-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  height: 14rem;
+  padding: 1rem;
+}
+
 .o-prestige-button {
   width: 22rem;
   height: 7rem;
@@ -1989,7 +1998,7 @@ br {
 }
 
 .t-dark-metro .o-infinity-button {
-  box-shadow: 1px 1px 1px 0 black;
+  box-shadow: 0.1rem 0.1rem 0.1rem 0 #9e9e9e;
 }
 
 .o-infinity-button--unavailable {
@@ -8884,11 +8893,6 @@ kbd {
 }
 
 /* #region reality-tab */
-
-.c-reality-tab__header {
-  margin-top: -0.5rem;
-  font-size: 1.2rem;
-}
 
 .c-reality-tab__reality-machines {
   color: var(--color-reality);
